# TFG

./: .gitattributes  .gitignore  README.md  TFG.ipynb  compile.sh  file_cleaner.py  ind_plots.py  main.tex  plots.py  plots_target.py  plots_target_html.py  pyproject.toml  refs.bib  test_plots.html
Barro/: M_2a_tau_dex_solMass__Barro_plots.html  SFR_2a_tau_solMass_yr__Barro_plots.html
BooMeLee/: SFR_14a_const_solMass_yr__BooMeLee_plots_1.html  SFR_14a_const_solMass_yr__BooMeLee_plots_2.html  SFR_14a_const_solMass_yr__BooMeLee_plots_3.html  SFR_14a_const_solMass_yr__BooMeLee_plots_4.html  SFR_14a_const_solMass_yr__BooMeLee_plots_5.html  SFR_14a_const_solMass_yr__BooMeLee_plots_6.html  SFR_14a_const_solMass_yr__BooMeLee_plots_7.html  SFR_14a_const_solMass_yr__BooMeLee_plots_8.html  SFR_14a_deltau_solMass_yr__BooMeLee_plots_1.html  SFR_14a_deltau_solMass_yr__BooMeLee_plots_2.html  SFR_14a_deltau_solMass_yr__BooMeLee_plots_3.html  SFR_14a_deltau_solMass_yr__BooMeLee_plots_4.html  SFR_14a_deltau_solMass_yr__BooMeLee_plots_5.html  SFR_14a_deltau_solMass_yr__BooMeLee_plots_6.html  SFR_14a_deltau_solMass_yr__BooMeLee_plots_7.html  SFR_14a_deltau_solMass_yr__BooMeLee_plots_8.html  SFR_14a_lin_solMass_yr__BooMeLee_plots_1.html  SFR_14a_lin_solMass_yr__BooMeLee_plots_2.html  SFR_14a_lin_solMass_yr__BooMeLee_plots_3.html  SFR_14a_lin_solMass_yr__BooMeLee_plots_4.html  SFR_14a_lin_solMass_yr__BooMeLee_plots_5.html  SFR_14a_lin_solMass_yr__BooMeLee_plots_6.html  SFR_14a_lin_solMass_yr__BooMeLee_plots_7.html  SFR_14a_lin_solMass_yr__BooMeLee_plots_8.html  (+16 more)
(+178 files in other folders)
